added menu toggle, custom fonts and backgrounds. completed mobile ver

--- a/index.html
+++ b/index.html
@@ -2,30 +2,53 @@
 <head>
   <meta charset="utf-8">
     <title>Resume</title>
+    <link href-"css/normalize.css" rel="stylesheet" type="text/css"
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/jQuery.js"></script>
     <script src="js/helper.js"></script>
     <!--<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>-->
+    <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
 
   <meta name="viewport" content="width=device-width">
 </head>
 <body unresolved>
 
 <div class="header">
-  <div class="headerImg"><img src="images/ericpic.jpg"></div>
-  <ul class="headerSkills">
-    <li>Nunchuk Skills</li>
-    <li>Computer Hacking Skils</li>
-    <li>Bow Hunting Skills</li>
-  </ul>
+  <div class="headerImg"><img class="profilePic" src="images/ericpic.jpg">
+    <ul class="headerSkills">
+      <li>Nunchuk Skills</li>
+      <li>Computer Hacking Skils</li>
+      <li>Bow Hunting Skills</li>
+    </ul>
+  </div>
+</div>
+<div id="topNav">
+  <a href="#">
+    <div class="menuButton">
+      <img class="hambergerL" src="images/hamberger.png">
+      <h3>Menu</h3>
+      <img class="hambergerR" src="images/hamberger.png">
+    </div>
+  </a>
+</div>
+<div id="dropdownContainer">
   <ul class="mainNav">
-    <li><a href=" ">Work Experience</a></li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">Education</a></li>
-    <li><a href="#">Skills</a></li>
-    <li><a href="#">Contact</a></li>
+    <a href="#">
+      <li><p> • Work Experience • </p></li>
+    </a>
+    <a href="#">
+      <li><p> • Projects • </p></li>
+    </a>
+    <a href="#">
+      <li><p> • Education • </p></li>
+    </a>
+    <a href="#">
+      <li><p> • Skills • </p></li>
+    </a>
+    <a href="#">
+      <li><p> • Contact • </p></li>
+    </a>
   </ul>
-  <ul id="topContacts"></ul>
 </div>
 
 <div class="main">
